# AiNiee-Next

./: .gitignore  Dockerfile  Launch.bat  LaunchGUI.bat  LaunchGUI.sh  README.md  README_EN.md  README_QUICK_START.md  ainiee_cli.py  prepare.bat  prepare_comic.bat  prepare_comic.sh  prepare_fixed.sh  pyproject.toml  update_log.md  xlsx_converter.py  批量电子书整合.py
.github/workflows/: Web_Build.yml  docker-publish.yml  tauri-dev-linux.yml  tauri-dev-macos.yml  tauri-dev-preview.yml  tauri-dev-windows.yml  tauri-publish.yml  tauri-release-linux.yml  tauri-release-macos.yml  tauri-release-windows.yml
Docs/: DEEPSEEK_API_KEY.md  DEEPSEEK_API_KEY_EN.md  README_ES.md  README_JA.md  README_KO.md  README_QUICK_START.md  README_QUICK_START_EN.md  README_RU.md  README_zh_CNTW.md  TRANSLATION_WORKFLOW_GUIDE.md  TRANSLATION_WORKFLOW_GUIDE_EN.md
I18N/: en.json  es.json  ja.json  ko.json  ru.json  zh_CN.json  zh_CNTW.json
ModuleFolders/Base/: Base.py  PluginManager.py
ModuleFolders/CLI/: OperationLogger.py  __init__.py
ModuleFolders/Diagnostic/: DiagnosticFormatter.py  KnowledgeBase.py  LLMErrorAnalyzer.py  RuleMatcher.py  SmartDiagnostic.py  __init__.py  i18n.py
ModuleFolders/Infrastructure/: MangaFeatureGuard.py
ModuleFolders/MangaCore/: __init__.py  constants.py  errors.py  types.py
ModuleFolders/Tests/: test_ai_proofread_export.py
README_IMG/Unzip/: README.md
Resource/: common_issues.json  queue_tasks.json
Tools/TauriShell/src-tauri/: Cargo.toml  tauri.conf.json
Tools/TauriShell/src-tauri/capabilities/: default.json
Tools/TauriShell/src-tauri/src/: main.rs
(+218 files in other folders)
