[package]
name = "ainiee-tauri-shell"
version = "0.1.0"
description = "AiNiee Tauri desktop shell PoC"
authors = ["AiNiee"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = []
